Changelog for mk-find:

2010-01-06: version 0.9.21

   * The script crashed immediately on some OS or versions of Perl (issue 733).

2009-10-30: version 0.9.20

   * --set-vars did not work (issue 597).
   * Command line options did not override config file options (issue 617).

2009-08-31: version 0.9.19

   * No tables were printed if no tests were given (issue 549).

2009-07-31: version 0.9.18

   * Added RISKS section to POD (issue 538).
   * The script crashed immediately on Windows (issue 531).
   * Added tests --column-name, --view, --procedure, --function, --trigger
     and --trigger-table.
   * Converted script to runnable module (issue 315).

2009-06-30: version 0.9.17

   * Updates to shared code.

2009-06-02: version 0.9.16

   * Removed the --askpass long option.  Use --ask-pass instead.
   * Removed the --daystart long option.  Use --day-start instead.
   * Removed the --setvars long option.  Use --set-vars instead.
   * Removed the --pid long option.  Use --connection-id instead.
   * Removed the --sid long option.  Use --session-id instead.
   * Removed the --exec_dsn long option.  Use --exec-dsn instead.
   * Removed the --exec_plus long option.  Use --exec-plus instead.
   * Updates to shared code.

2009-03-31: version 0.9.15

   * Send debugging output to STDERR (issue 308).
   * Removed string interpolation from debugging calls (issue 308).
   * Connection options were not read from the [client] section (issue 249).
   * Set connection options immediately after connecting (issue 286).
   * Updates to shared code.

2008-12-01: version 0.9.14

   * Updates to shared code.

2008-09-19: version 0.9.13

   * Updates to shared code.
   * Made debugging code more efficient in non-debug mode.

2008-08-11: version 0.9.12

   * Files downloaded directly from SVN crashed due to version information.
   * Added --exec_dsn so you can execute SQL on a different server.

2008-06-02: version 0.9.11

   * Updated common code.

2008-03-16: version 0.9.10
